Added evaluation for execution